--- a/team_page.html
+++ b/team_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="team_page.css">
   <title>Team Page</title>
 </head>
 <body>
@@ -76,5 +76,6 @@
     </div>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+  <script src="team_page.js"></script>
   </body>
 </html>
