--- a/player_page.html
+++ b/player_page.html
@@ -386,6 +386,6 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-  <script src="team_page.js"></script>
+  <script src="player_page.js"></script>
   </body>
 </html>
