--- a/player_page.html
+++ b/player_page.html
@@ -368,11 +368,10 @@
           </div>
         </div>
     
-    <h2 style="color: var(--accent-gold); margin-top: 30px;">Season Stats:</h2>
+    <h2 style="color: var(--accent-gold); margin-top: 30px;">Season Stat Averages:</h2>
     <table class="stats-table">
       <thead>
         <tr>
-          <th>Season</th>
           <th>PPG</th>
           <th>RPG</th>
           <th>APG</th>
