--- a/team_page.html
+++ b/team_page.html
@@ -60,9 +60,8 @@
         <thead>
           <tr>
             <th>Player Name</th><th>PPG</th><th>RPG</th><th>APG</th>
-            <th>SPG</th><th>BPG</th><th>TOV</th><th>FG%</th>
-            <th>3P%</th><th>FT%</th><th>ORPG</th><th>DRPG</th>
-            <th>FPG</th><th>+/-</th><th>PRF</th>
+            <th>SPG</th><th>BPG</th><th>FG%</th>
+            <th>3P%</th><th>FT%</th>
           </tr>
         </thead>
         <tbody id="statsBody">
